perm fixed