@@ -12,12 +12,12 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.authentication.logout.LogoutHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static com.intela.realestatebackend.models.archetypes.Role.*;
 
@@ -37,6 +37,12 @@ public class SecurityConfig {
                 .authorizeHttpRequests((authorize) -> authorize
                         .requestMatchers("/api/v1/auth/**")
                         .permitAll()
+                        // Restrict these auth-related endpoints to authenticated users
+                        .requestMatchers("/api/v1/auth/user",
+                                "/api/v1/auth/userByAccessToken",
+                                "/api/v1/auth/userByRefreshToken",
+                                "/api/v1/auth/resetPassword")
+                        .authenticated()
                         // Allow access to Swagger UI and API docs
                         .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-resources/**", "/swagger-ui.html", "/webjars/**")
                         .permitAll()
@@ -46,7 +52,7 @@ public class SecurityConfig {
                         //CUSTOMER ENDPOINTS
                         .requestMatchers("/api/v1/customer/**").hasAnyRole(CUSTOMER.name(), ADMIN.name())
 
-                        .requestMatchers("/api/v1/properties/**").hasAnyRole(CUSTOMER.name(), ADMIN.name())
+                        .requestMatchers("/api/v1/properties/**").permitAll()
 
                         .requestMatchers("/api/v1/user/**").hasAnyRole(CUSTOMER.name(), ADMIN.name())
 
@@ -71,12 +77,13 @@ public class SecurityConfig {
                 );
         return http.build();
     }
+
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
